Added more routes to swagger doc.
